--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "next": "^16.0.8",
