--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "next": "^16.0.8",
+    "next-intl": "^4.6.1",
     "nodemailer": "^7.0.11",
     "prisma": "^6.19.0",
     "react": "19.2.0",
