--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "scripts": {
-    "dev": "next dev --webpack",
-    "build": "next build --webpack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -21,7 +21,7 @@
     "db:migrate": "npx prisma migrate dev",
     "db:migrate:deploy": "npx prisma migrate deploy",
     "db:generate": "npx prisma generate",
-    "vercel:build": "prisma generate && next build",
+    "vercel:build": "prisma migrate deploy && prisma generate && next build",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -30,7 +30,6 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "jsonwebtoken": "^9.0.2",
     "next": "^16.0.8",
@@ -45,6 +44,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "dotenv": "^17.2.3",
     "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
