--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "@typescript-eslint/parser": "^8.53.0",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-config-next": "^16.1.3",
+    "globals": "^15.0.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
