--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "dotenv": "^17.2.3",
     "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
@@ -55,10 +54,12 @@
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
+    "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-config-next": "^16.1.3",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.0.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
