--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "johnndekebitikportfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
+  },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
