fix: include Prisma migrations for Vercel deployment
- Remove prisma/migrations/ from .gitignore to track migrations in Git
- Update vercel.json buildCommand to apply migrations with 'prisma migrate deploy'
- Include all 3 existing migrations:
  - Initial schema (20251209)
  - Analytics tables (20251226)
  - Multilingual fields (20251227)

This fixes the issue where database tables were not created on Vercel
causing API routes to fail with 500 errors.

--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ next-env.d.ts
 
 Thumbs.db
 
-prisma/migrations/
+# prisma/migrations/  # ✅ Les migrations DOIVENT être committées pour Vercel !
 
 logs
 *.lo
